module-info/model aktualisiert